Write profile changes to Konsole's location, not KPart's app

Thanks to Wolfgang Bauer (wbauer tmo at) for patch

REVIEW:128342
BUG: 364336